Fix layout bugs.

--- a/styles.css
+++ b/styles.css
@@ -6,15 +6,24 @@
   --dark-text: #e7e7e7;
 }
 
-html {
+html,
+body {
+  margin: 0;
+  padding: 0;
+  /* max-width: 100%; */
+  overflow-x: hidden;
+  overflow-y: scroll;
+  min-height: 100%;
+  height: 100%;
   width: 100%;
-  position: absolute;
+}
+
+html {
   background-color: transparent;
-  /* border: 10px solid red; */
+  border: 2px solid red;
 }
 
 body {
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   background: var(--light-bg);
@@ -22,7 +31,7 @@ body {
   background-position: center, right bottom;
   background-repeat: no-repeat, no-repeat;
   font-family: 'Cormorant Garamond', serif;
-  /* border: 10px solid orange; */
+  border: 2px solid orange;
 }
 
 body.dark-theme {
@@ -33,11 +42,19 @@ body.dark-theme {
 svg {
   fill: var(--light-text);
   width: 100%;
-  /* border: 1px solid red; */
+  border: 1px solid red;
 }
 
 svg.dark-theme {
   fill: var(--dark-text);
+}
+
+.dark-theme a:link {
+  color: goldenrod;
+}
+
+.dark-theme a:visited {
+  color: red;
 }
 
 .bg-img {
@@ -48,6 +65,7 @@ svg.dark-theme {
 
 #title {
   height: auto;
+  max-width: 90%;
 }
 
 #clock {
@@ -73,24 +91,29 @@ a {
   text-decoration: none;
 }
 
+footer {
+  display: inline-flex;
+  height: 2rem;
+  margin: auto 1rem 1rem 1rem;
+  max-width: 100%;
+  border: 1px solid yellowgreen;
+
+}
+
 footer p,
 footer a {
   font-size: 1rem;
 }
 
-footer {
-  display: inline-flex;
-  height: 2rem;
-  padding: 0;
-  margin: auto 0 1rem 0;
-  width: 100%;
-  /* border: 1px solid yellowgreen; */
-}
-
 .footer-right {
   display: flex;
+  align-items: center;
   right: 0;
   margin: 0 2rem 0 auto;
+}
+
+#kofi {
+  width: auto !important;
 }
 
 .flex-container {
@@ -104,15 +127,15 @@ footer {
 }
 
 .left-col {
-  /* border: 1px solid green; */
+  border: 1px solid green;
   flex-basis: 30%;
   flex-grow: 1;
   flex-shrink: 0;
-  text-align: left;
+  text-align: center;
 }
 
 .right-col {
-  /* border: 1px solid green; */
+  border: 1px solid green;
   flex-basis: 60%;
   flex-grow: 1;
   flex-shrink: 1;
@@ -149,10 +172,6 @@ button:hover {
 }
 
 @media (orientation: portrait) {
-  .left-col {
-    text-align: center;
-  }
-
   .flex-container {
     gap: 4em;
   }
@@ -161,8 +180,10 @@ button:hover {
     flex-basis: 100%;
   }
 
-  .buttons {
-    margin: 1rem 0;
+  .buttons-container {
+    margin-top: 3rem;
+    margin-bottom: 0;
+    ;
   }
 
   button {
@@ -186,5 +207,9 @@ button:hover {
     position: absolute;
     top: 4rem;
     transform: translate(50%, 0%) scale(110%);
+  }
+
+  footer {
+    margin-bottom: 2rem;
   }
 }
